security-oauth2-feature: функционал готов
