# payment-service/src/main/java/com/shop/easybuy/controller/payment/PaymentController.java
@@ -2,12 +2,15 @@ package com.shop.easybuy.controller.payment;
 
 import com.shop.easybuy.api.payment.PaymentApi;
 import com.shop.easybuy.model.payment.BalanceRs;
+import com.shop.easybuy.model.payment.BalanceSetRq;
 import com.shop.easybuy.model.payment.PaymentRq;
 import com.shop.easybuy.service.payment.PaymentService;
 import jakarta.validation.Valid;
+import jakarta.validation.constraints.NotNull;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.server.ServerWebExchange;
 import reactor.core.publisher.Mono;
@@ -19,9 +22,12 @@ public class PaymentController implements PaymentApi {
     private final PaymentService paymentService;
 
     @Override
-    public Mono<ResponseEntity<BalanceRs>> getBalance(ServerWebExchange exchange) {
+    public Mono<ResponseEntity<BalanceRs>> getBalance(
+            @NotNull @Valid @RequestParam(value = "userId", required = true) Long userId,
+            ServerWebExchange exchange
+    ) {
         return paymentService
-                .getBalance()
+                .getBalance(userId)
                 .map(ResponseEntity::ok);
     }
 
@@ -31,6 +37,14 @@ public class PaymentController implements PaymentApi {
 
         return paymentRq
                 .flatMap(paymentService::purchaseOrder)
+                .map(ResponseEntity::ok);
+    }
+
+    @Override
+    public Mono<ResponseEntity<Boolean>> setBalance(@Valid @RequestBody Mono<BalanceSetRq> balanceSetRq,
+                                                    ServerWebExchange exchange) {
+        return balanceSetRq
+                .flatMap(paymentService::setBalance)
                 .map(ResponseEntity::ok);
     }
 }
