# payment-service/src/main/resources/openapi/payment-spec.yaml
@@ -4,7 +4,7 @@ info:
   description: Сервис, отвечающий за получение баланса и проведение платежей
   version: 1.0.0
 security:
-  - keycloak: []
+  - keycloak: [ ]
 servers:
   - url: http://localhost:8081
 paths:
@@ -14,6 +14,15 @@ paths:
       operationId: getBalance
       tags:
         - payment
+      parameters:
+        - in: query
+          name: userId
+          required: true
+          schema:
+            type: integer
+            format: int64
+            example: 1
+          description: ID пользователя
       responses:
         '200':
           description: Текущий баланс успешно получен
@@ -21,6 +30,39 @@ paths:
             application/json; charset=utf-8:
               schema:
                 $ref: '#/components/schemas/BalanceRs'
+        '404':
+          description: Баланс не найден
+          content:
+            application/json; charset=utf-8:
+              schema:
+                $ref: '#/components/schemas/ErrorRs'
+        '500':
+          description: Внутренняя ошибка сервера
+          content:
+            application/json; charset=utf-8:
+              schema:
+                $ref: '#/components/schemas/ErrorRs'
+    post:
+      summary: Установить текущий баланс пользователя
+      operationId: setBalance
+      tags:
+        - payment
+      requestBody:
+        required: true
+        description: Устанавливаемый баланс пользователя
+        content:
+          application/json; charset=utf-8:
+            schema:
+              $ref: '#/components/schemas/BalanceSetRq'
+      responses:
+        '200':
+          description: Текущий баланс успешно установлен
+          content:
+            application/json; charset=utf-8:
+              schema:
+                type: boolean
+                example: true
+                description: Статус установки
         '404':
           description: Баланс не найден
           content:
@@ -79,37 +121,66 @@ components:
       flows:
         clientCredentials:
           tokenUrl: http://localhost:8082/realms/easybuy/protocol/openid-connect/token
-          scopes: {}
+          scopes: { }
   schemas:
     PaymentRq:
       type: object
       required:
+        - userId
         - amount
       properties:
+        userId:
+          description: ID пользователя
+          type: integer
+          format: int64
+          example: 1
         amount:
           description: Сумма платежа
           type: integer
           format: int64
           example: 5000
-    BalanceRs:
+    BalanceGetRq:
       required:
+        - userId
+      type: object
+      properties:
+        userId:
+          description: ID пользователя
+          type: integer
+          format: int64
+          example: 1
+    BalanceSetRq:
+      required:
+        - userId
         - balance
       type: object
       properties:
+        userId:
+          description: ID пользователя
+          type: integer
+          format: int64
+          example: 1
+        balance:
+          description: Устанавливаемый баланс
+          type: integer
+          format: int64
+          example: 10000
+    BalanceRs:
+      required:
+        - userId
+        - balance
+      type: object
+      properties:
+        userId:
+          description: ID пользователя
+          type: integer
+          format: int64
+          example: 1
         balance:
           description: Текущий баланс
           type: integer
           format: int64
           example: 10000
-    StatusRs:
-      required:
-        - status
-      type: object
-      properties:
-        status:
-          description: Статус операции
-          type: boolean
-          example: true
     ErrorRs:
       required:
         - errorInfo
